Added in Images
New Images

--- a/index.html
+++ b/index.html
@@ -547,14 +547,176 @@
     </div>
     <div class="section" id="section15">
         <div class="intro">
-            <h1>Just use </h1>
-            <p>autoScrolling:false</p>
+            <div class="svg-container">
+            <svg height="400" width="450" class="line">
+              <path d="M 0 0 l 0 1200" stroke="#3c2415" stroke-width="1" fill="none" />
+            </svg>
+            </div>
+            <div class="list small">
+                    <div class="item one">
+                        <div class="item-year">1971</div>
+                        <div class="info">
+                            <div class="name"><h2>Capitol Reef</h2></div>
+                        </div>
+                    </div>
+                    <div class="item two">
+                        <div class="item-year">1971</div>
+                        <div class="info">
+                            <div class="name"><h2>Voyageurs</h2></div>
+                        </div>
+                    </div>
+                    <div class="item thr">
+                        <div class="item-year">1971</div>
+                        <div class="info">
+                            <div class="name"><h2>Arches</h2></div>
+                        </div>
+                    </div>
+                    <div class="item fou">
+                        <div class="item-year">1978</div>
+                        <div class="info">
+                            <div class="name"><h2>Theodore Roosevelt</h2></div>
+                        </div>
+                    </div>
+                    <div class="item fiv">
+                        <div class="item-year">1978</div>
+                        <div class="info">
+                            <div class="name"><h2>Badlands</h2></div>
+                        </div>
+                    </div>
+                    <div class="item six">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Channel Islands</h2></div>
+                        </div>
+                    </div>
+                    <div class="item sev">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Biscayne</h2></div>
+                        </div>
+                    </div>
+                    <div class="item eig">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Katmai</h2></div>
+                        </div>
+                    </div>
+                    <div class="item nin">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Glacier Bay </h2></div>
+                        </div>
+                    </div>
+                    <div class="item ten">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Gates of the Artic </h2></div>
+                        </div>
+                    </div>
+                    <div class="item ele">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Kenai Fjords </h2></div>
+                        </div>
+                    </div>
+                    <div class="item twe">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Kobuk Valley</h2></div>
+                        </div>
+                    </div>
+                </div>
+            </path>
         </div>
     </div>
     <div class="section" id="section16">
         <div class="intro">
-            <h1>Just use </h1>
-            <p>autoScrolling:false</p>
+            <div class="svg-container">
+            <svg height="400" width="450" class="line">
+              <path d="M 0 0 l 0 1200" stroke="#3c2415" stroke-width="1" fill="none" />
+            </svg>
+            </div>
+            <div class="list small">
+                    <div class="item one">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Lake Clark </h2></div>
+                        </div>
+                    </div>
+                    <div class="item two">
+                        <div class="item-year">1980</div>
+                        <div class="info">
+                            <div class="name"><h2>Wrangell St. Elias </h2></div>
+                        </div>
+                    </div>
+                    <div class="item thr">
+                        <div class="item-year">1986</div>
+                        <div class="info">
+                            <div class="name"><h2>Great Basin </h2></div>
+                        </div>
+                    </div>
+                    <div class="item fou">
+                        <div class="item-year">1988</div>
+                        <div class="info">
+                            <div class="name"><h2>National Park of American Samoa </h2></div>
+                        </div>
+                    </div>
+                    <div class="item fiv">
+                        <div class="item-year">1992</div>
+                        <div class="info">
+                            <div class="name"><h2>Dry Tortugas </h2></div>
+                        </div>
+                    </div>
+                    <div class="item six">
+                        <div class="item-year">1994</div>
+                        <div class="info">
+                            <div class="name"><h2>Death Valley </h2></div>
+                        </div>
+                    </div>
+                    <div class="item sev">
+                        <div class="item-year">1994</div>
+                        <div class="info">
+                            <div class="name"><h2>Saguaro</h2></div>
+                        </div>
+                    </div>
+                    <div class="item eig">
+                        <div class="item-year">1994</div>
+                        <div class="info">
+                            <div class="name"><h2>Joshua Tree</h2></div>
+                        </div>
+                    </div>
+                    <div class="item nin">
+                        <div class="item-year">1999</div>
+                        <div class="info">
+                            <div class="name"><h2>Black Canyon of the Gunnison</h2></div>
+                        </div>
+                    </div>
+                    <div class="item ten">
+                        <div class="item-year">2000</div>
+                        <div class="info">
+                            <div class="name"><h2>Cuyahoga Valley  </h2></div>
+                        </div>
+                    </div>
+                    <div class="item ele">
+                        <div class="item-year">2003</div>
+                        <div class="info">
+                            <div class="name"><h2>Congaree</h2></div>
+                        </div>
+                    </div>
+                    <div class="item twe">
+                        <div class="item-year">2004</div>
+                        <div class="info">
+                            <div class="name"><h2>Great Sand Dunes </h2></div>
+                        </div>
+                    </div>
+                    <div class="item thi">
+                        <div class="item-year">2013</div>
+                        <div class="info">
+                            <div class="name"><h2>Pinnacles</h2></div>
+                        </div>
+                    </div>
+                </div>
+            </path>
         </div>
     </div>
     <div class="section" id="section17">
@@ -1090,10 +1252,6 @@
         </g>
         </svg>
     </div>
-</div>
-<div class="button-container">
-  <a class="button" href="#" id="buttonup"></a>
-  <a class="button" href="#" id="buttondn"></a>
 </div>
 <a href="#cd-nav" class="cd-nav-trigger">Menu 
     <span class="cd-nav-icon"></span>
