--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                   <path d="M 0 0 l 0 1200" stroke="#3c2415" stroke-width="1" fill="none" />
                 </svg>
             </div>
-            <h1>100 Years of National Parks Service</h1>
+            <img src="svg/100.svg" width="100%"></img>
+            <h1>Years of National Parks Service</h1>
+            <hr class="divider">
+            <p><span class="dropcap">L</span>ong before the National Park System was officially designated in 1916, there were a number of activists and movements to get the awareness to the point at which it was. See how the NPS has become what it is in 2016 by first looking back to 1872.
+            </p>
         </div>
         <div class="arrows">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 60" style="enable-background:new 0 0 40 60;" xml:space="preserve">
@@ -105,7 +109,7 @@
     <div class="section" id="section1">
         <div class="svg-container">
             <svg height="400" width="450" class="line">
-              <path d="M 0 0 l 0 1200" stroke="#3c2415" stroke-width="1" fill="none" />
+              <path d="M 0 0 l 0 1400" stroke="#3c2415" stroke-width="1" fill="none" />
             </svg>
         </div>
         <div class="intro">
@@ -115,7 +119,7 @@
                     <div class="info">
                         <div class="name"><h2>Yosemite</h2></div>
                         <div class="state"><p>California</p></div>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non risus varius.
+                        <p>John Muir convinced prominent guests of the importance of putting the area under federal protection; one such guest was Robert Underwood Johnson, editor of Century Magazine. Muir and Johnson lobbied Congress for the Act that created Yosemite National Park.
                         </p>
                     </div>
                 </div>
@@ -344,7 +348,7 @@
                     <div class="info">
                         <div class="name"><h2>Everglades</h2></div>
                         <div class="state"><p>Florida</p></div>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non risus varius. Bvestibulum at eros. Vestibulum id ligula porta felis euismod semper.
+                        <p>It is the third-largest national park in the lower 48 states after Death Valley and Yellowstone. It has been declared an International Biosphere Reserve, a World Heritage Site, and a Wetland of International Importance, one of only three locations in the world to appear on all three lists.
                         </p>
                     </div>
                 </div>
@@ -353,7 +357,7 @@
                     <div class="info">
                         <div class="name"><h2>Great Smoky Mountains </h2></div>
                         <div class="state"><p>Tennessee</p></div>
-                        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non risus varius.
+                        <p>The park was chartered by the United States Congress in 1934 and officially dedicated by President Franklin Delano Roosevelt in 1940. It is the most visited park in America.
                         </p>
                     </div>
                 </div>
@@ -522,7 +526,7 @@
                         <div class="name"><h2>North Cascades</h2></div>
                         <div class="state"><p>Washington</p></div>
                         <p>
-                        Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non risus varius. Bvestibulum at eros. Vestibulum id ligula porta felis euismod semper.
+                        Though the North Cascades National Park Act designated the region as a National Park on October 2, 1968, the National Park Service did not commence direct management until January 1, 1969.
                         </p>
                     </div>
                 </div>
@@ -532,7 +536,7 @@
                         <div class="name"><h2>Redwood</h2></div>
                         <div class="state"><p>California</p></div>
                         <p>
-                        Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vestibulum id ligula porta felis euismod semper. Maecenas sed diam eget risus varius blandit sit amet non risus varius. Bvestibulum at eros. Vestibulum id ligula porta felis euismod semper.
+                        Redwood National Park and California's Del Norte Coast, Jedediah Smith, and Prairie Creek Redwoods State Parks (dating from the 1920s)combine to protect 133,000 acres of old-growth redwood forests.
                         </p>
                     </div>
                 </div>
@@ -735,13 +739,26 @@
         </div>
     </div>
     <div class="section" id="section17">
-        <div class="intro">
-            <h1>Just use </h1>
-            <p>autoScrolling:fs</p>
+        <div class="intro event last">
+            <div class="svg-container">
+                <svg height="1200" width="1" class="line">
+                  <path d="M 0 0 l 0 1200" stroke="#3c2415" stroke-width="1" fill="none" />
+                </svg>
+            </div>
+            <img src="svg/84.svg" width="100%"></img>
+            <h1>Million Acres of Protected Land</h1>
+            <hr class="divider">
+            <p>As the National Park Service continues it's efforts in the future in order to perserve America's greatest idea, the National Park Service benefits greatly from donations from people that understand it's value. Even a small donation goes a long way to help fund and support the continuing efforts. 
+            </p>
+            <a href="https://www.nps.gov/getinvolved/donate.htm" target="blank" class="button">Donate to NPS</a>
         </div>
     </div>
 </div>
 <div id="right-content">
+    <div class="info default">
+        <a target="_blank" href="https://www.flickr.com/photos/jsstylos/5152325979/in/photolist-8Ri21x-bwqRqK-cGNcbJ-4BP4P7-bBDebX-rQ92Vb-bvNgze-oEiRSV-rinKh2-fkV8bw-c6tv2u-oMq8HU-dGNcaY-owtDd5-oWuSpv-qYWsfS-bv9bVC-e4Rkg9-oWvbG3-k2GEoQ-oWvPbU-8gAP4t-jCKzXE-kvwvqS-jqS2K1-rs2Tv8-pbY7qA-gKZ1ro-eo9b7F-HUNQkR-cADA5j-s9TPh7-pqeLvh-ohJ7jh-5eSsvr-fvDGta-HNpKqZ-bC6Y1p-eCaPzY-oSa5cb-i7ekvP-rg7Ld8-6zeCz6-nse7Sw-eZK2b6-6zeCcH-nWd7uC-6zeCpa-9Thz7v-kBvACb">Double Arch by Night</a>
+        <p>Jeffrey Stylos</p>
+    </div>
     <div class="info first">
         <a target="_blank" href="https://www.flickr.com/photos/yellowstonenps/22755808179/">Grand Prismatic Spring</a>
         <p>Jim Peaco</p>
@@ -785,6 +802,10 @@
     <div class="info eleventh">
         <a target="_blank" href="https://www.flickr.com/photos/yellowstonenps/22755808179/">Grand Prismatic Spring</a>
         <p>Jim Peaco</p>
+    </div>
+    <div class="info twelfth">
+        <a target="_blank" href="https://www.flickr.com/photos/cobalt/8055362514/in/photolist-dgPQCA-z3zPgB-9Y4coC-dg7Pr7-ons8o9-cAMRGA-bPqPhB-phPWfA-cAMnwU-aqTLoe-5irs7w-e5w8Qy-QbmnH-a6LjTB-a6kch2-a6LkzB-5ozHw6-KKxM4-5dekpr-a6Lryn-nbbCaB-aeKzCN-e5bs6p-KKkPs-n4k2wP-53rszg-GpC3dh-rfTx4R-cysLPU-GoszBa-77z6Ck-nbbGW8-a6o3j7-5NxM6p-FLV2Mv-7jg6JX-77zWQe-77VmZR-a6o171-77A5Hc-nD2e5t-ooCXPN-a6katt-oqqiyx-czJnt9-a6LRLP-aeGKRn-bPqPfK-wEyHeU-cAMidL">Great Sand Dunes</a>
+        <p></p>
     </div>
 </div>
 <div class="timeline">
