--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="svg/100.svg" width="100%"></img>
             <h1>Years of National Parks Service</h1>
             <hr class="divider">
-            <p><span class="dropcap">L</span>ong before the National Park System was officially designated in 1916, there were a number of activists and movements to get the awareness to the point at which it was. See how the NPS has become what it is in 2016 by first looking back to 1872.
+            <p><span class="dropcap">L</span>ong before the National Park System was officially created, there were a number of activists and movements that raised awareness leading up to 1916. See how the NPS has become what it is today in 2016 by first looking back to 1872 where it all started.
             </p>
         </div>
         <div class="arrows">
