--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="info">
                         <div class="name"><h2>Yosemite</h2></div>
                         <div class="state"><p>California</p></div>
-                        <p>John Muir convinced prominent guests of the importance of putting the area under federal protection; one such guest was Robert Underwood Johnson, editor of Century Magazine. Muir and Johnson lobbied Congress for the Act that created Yosemite National Park.
+                        <p>One of the most notable advocates, John Muir, convinced prominent guests of the importance of putting the Yosemite area under federal protection; one such guest was Robert Underwood Johnson, editor of Century Magazine. Muir and Johnson lobbied Congress for the Act that created Yosemite National Park.
                         </p>
                     </div>
                 </div>
@@ -1305,23 +1305,24 @@
              viewBox="0 0 20 136.7" style="enable-background:new 0 0 20 136.7;" xml:space="preserve">
         <style type="text/css">
         .year .stroke {
-            clip-path: url(#NOW);
+            clip-path: url(#2016);
         }
         </style>
         <g>
             <defs>
-                <path id="NOW" d="M17.3,40.3c0.4,0,0.6,0.1,0.6,0.6v1.8c0,0.3-0.1,0.4-0.3,0.5l-7.7,4.5c-1,0.6-1.8,0.9-1.9,0.9h9.2
-                c0.4,0,0.6,0.1,0.6,0.6V51c0,0.4-0.2,0.6-0.6,0.6H2.7c-0.4,0-0.6-0.1-0.6-0.6v-1.8c0-0.3,0.1-0.4,0.2-0.5l8-4.7
-                c0.7-0.4,1.6-0.8,1.6-0.8H2.7c-0.4,0-0.6-0.1-0.6-0.6v-1.8c0-0.4,0.2-0.6,0.6-0.6H17.3z M5.7,36.1c-1.9,0-3.8-1.4-3.8-5.6
-                s1.8-5.6,3.8-5.6h8.6c1.9,0,3.8,1.4,3.8,5.6s-1.8,5.6-3.8,5.6H5.7z M6.3,28c-1.2,0-1.7,0.9-1.7,2.5S5.1,33,6.3,33h7.5
-                c1.2,0,1.7-0.9,1.7-2.5S14.9,28,13.7,28H6.3z M10.6,9c0.8-0.2,2.1-0.3,2.3-0.4c-0.2,0-1.3-0.2-2.3-0.4l-7.9-2
-                C2.3,6.1,2.1,5.9,2.1,5.5V3.8c0-0.4,0.2-0.5,0.6-0.4L17.3,7c0.4,0.1,0.6,0.3,0.6,0.7v2c0,0.3-0.2,0.6-0.6,0.6l-8.1,2
-                c-0.5,0.1-1.9,0.3-2.1,0.3c0.2,0,1.6,0.2,2.1,0.3l8.1,2c0.4,0.1,0.6,0.3,0.6,0.7v2c0,0.3-0.2,0.6-0.6,0.6L2.7,22.1
-                c-0.4,0.1-0.6,0-0.6-0.4v-2.1c0-0.4,0.2-0.6,0.6-0.7l7.9-1.9c0.9-0.2,1.9-0.4,1.9-0.4s-0.8-0.1-1.9-0.4l-7.9-2
-                c-0.4-0.1-0.6-0.3-0.6-0.7v-1.9c0-0.4,0.2-0.6,0.6-0.7L10.6,9z"/>
+                <path id="2016" d="M15,46.3c0-0.4,0.1-0.6,0.6-0.6H17c0.4,0,0.6,0.2,0.6,0.6v9.3c0,0.4-0.2,0.6-0.6,0.6h-4.3
+                c-1.3,0-1.7-0.8-2.1-1.6l-2-4.8c-0.2-0.4-0.5-0.9-1.3-0.9H6c-1.2,0-1.7,0.7-1.7,2.3c0,1.5,0.6,2.3,1.7,2.3h0.9
+                c0.4,0,0.6,0.1,0.6,0.5v1.9c0,0.4-0.2,0.6-0.6,0.6H5.4c-2,0-3.8-1.3-3.8-5.3c0-4,1.8-5.4,3.8-5.4h1.8c2.3,0,3.1,1.3,3.5,2.2l1.6,3.9
+                c0.3,0.7,0.5,1.1,1.3,1.1H15V46.3z M5.4,42.4c-2,0-3.8-1.3-3.8-5.4c0-4,1.8-5.4,3.8-5.4H14c1.9,0,3.8,1.4,3.8,5.4
+                c0,4.1-1.8,5.4-3.8,5.4H5.4z M6,34.7c-1.2,0-1.7,0.8-1.7,2.3c0,1.5,0.6,2.3,1.7,2.3h7.5c1.2,0,1.7-0.7,1.7-2.3
+                c0-1.5-0.6-2.3-1.7-2.3H6z M1.7,21.4c0-0.3,0-0.6,0.6-0.6H15v-3c0-0.4,0.1-0.6,0.6-0.6H17c0.4,0,0.6,0.2,0.6,0.6v9.3
+                c0,0.4-0.2,0.6-0.6,0.6h-1.5c-0.4,0-0.6-0.2-0.6-0.6V24H4.8l0.6,3.1c0.1,0.4-0.1,0.6-0.5,0.6H3.4c-0.4,0-0.6-0.2-0.6-0.6L1.7,21.4z
+                 M5.4,13.8c-1.9,0-3.8-1.2-3.8-5.2s1.9-5.2,3.8-5.2H6c0.4,0,0.6,0.2,0.6,0.6v1.9c0,0.4-0.2,0.5-0.6,0.5H5.9C4.8,6.4,4.2,7,4.2,8.6
+                c0,1.5,0.6,2.1,1.7,2.1h2.8C8.3,10.1,8,9.2,8,8.1c0-3.6,1.9-4.9,3.8-4.9H14c1.9,0,3.8,1.2,3.8,5.3c0,4-1.8,5.2-3.8,5.2H5.4z
+                 M12.2,6.3c-1.2,0-1.7,0.6-1.7,2.2c0,1.4,0.6,2.2,1.6,2.2h1.5c1.2,0,1.7-0.7,1.7-2.2c0-1.5-0.6-2.2-1.7-2.2H12.2z"/>
             </defs>
-            <clipPath id="NOW">
-                <use xlink:href="#NOW"  style="overflow:visible;"/>
+            <clipPath id="2016">
+                <use xlink:href="#2016"  style="overflow:visible;"/>
             </clipPath>
             <rect class="stroke" width="20" height="136.7"/>
         </g>
