Added Viewport Meta Tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="100 Years of National Park Service celebrates the story of how the National Park System became what it is today." />
     <meta name="keywords"  content="national parks timeline, us history, yosemite national park, sequoia national park" />
     <meta name="Resource-type" content="Document" />
+    <meta name="viewport" content="initial-scale=1">
 
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
