Twitter added in

--- a/index.html
+++ b/index.html
@@ -756,6 +756,9 @@
     </div>
 </div>
 <div id="right-content">
+    <a class="twitter" target="_blank" href="https://twitter.com/home?status=100yearsofnps.com%20Explore%20the%20history%20of%20our%20National%20Parks%20%23FindYourPark">
+        <img src="svg/twitter.svg">
+    </a>
     <div class="info default">
         <a target="_blank" href="https://www.flickr.com/photos/jsstylos/5152325979/in/photolist-8Ri21x-bwqRqK-cGNcbJ-4BP4P7-bBDebX-rQ92Vb-bvNgze-oEiRSV-rinKh2-fkV8bw-c6tv2u-oMq8HU-dGNcaY-owtDd5-oWuSpv-qYWsfS-bv9bVC-e4Rkg9-oWvbG3-k2GEoQ-oWvPbU-8gAP4t-jCKzXE-kvwvqS-jqS2K1-rs2Tv8-pbY7qA-gKZ1ro-eo9b7F-HUNQkR-cADA5j-s9TPh7-pqeLvh-ohJ7jh-5eSsvr-fvDGta-HNpKqZ-bC6Y1p-eCaPzY-oSa5cb-i7ekvP-rg7Ld8-6zeCz6-nse7Sw-eZK2b6-6zeCcH-nWd7uC-6zeCpa-9Thz7v-kBvACb">Double Arch by Night</a>
         <p>Jeffrey Stylos</p>
