--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <meta name="keywords"  content="national parks timeline, us history, yosemite national park, sequoia national park" />
     <meta name="Resource-type" content="Document" />
     <meta name="viewport" content="initial-scale=1">
-    <meta property="og:description" 
-      content="Celebrate the last 100+ years of our National Parks." />
+    <meta property="og:title" content="100 Years of National Parks" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.100yearsofnps.com" />
     <meta property="og:image" content="http://www.100yearsofnps.com/img/screen-intro.png" />
-    <meta property="og:locale" content="es_ES" />
-    <meta property="og:site_name" content="100 Years of National Park Service" />
-
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
