OG Tags Modified

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.100yearsofnps.com" />
     <meta property="og:image" content="http://www.100yearsofnps.com/img/screen-intro.png" />
+    <meta property=”og:description” content=”Celebrate the beautiful history of our National Parks” />
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
