--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta property="og:image" content="http://www.100yearsofnps.com/img/screen-intro.png" />
     <meta property=”og:description” content=”Celebrate the beautiful history of our National Parks” />
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@DallasBarnes">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="http://www.100yearsofnps.com" />
     <meta name="twitter:title" content="100 Years of National Parks" />
