Updated Twitter Tweeting

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
     </div>
 </div>
 <div id="right-content">
-    <a class="twitter" target="_blank" href="https://twitter.com/home?status=100yearsofnps.com%20Explore%20the%20history%20of%20our%20National%20Parks%20%23FindYourPark">
+    <a class="twitter" target="_blank" href="https://twitter.com/home?status=www.100yearsofnps.com%20Explore%20the%20history%20of%20our%20National%20Parks%20%23FindYourPark">
         <img src="svg/twitter.svg">
     </a>
     <div class="info default">
