--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="http://www.100yearsofnps.com" />
     <meta name="twitter:title" content="100 Years of National Parks" />
     <meta name="twitter:description" content="Celebrate the beautiful history of our National Parks" />
-    <meta name="twitter:image" content="http://www.100yearsofnps.com/img/screen-intro.png" />
+    <meta name="twitter:image" content="http://www.100yearsofnps.com/img/screen-intro.png?'.uniqid().'" />
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
