Updated photos via The Outbound

--- a/index.html
+++ b/index.html
@@ -1352,6 +1352,14 @@
         <a target="_blank" href="https://www.flickr.com/photos/cobalt/8055362514/in/photolist-dgPQCA-z3zPgB-9Y4coC-dg7Pr7-ons8o9-cAMRGA-bPqPhB-phPWfA-cAMnwU-aqTLoe-5irs7w-e5w8Qy-QbmnH-a6LjTB-a6kch2-a6LkzB-5ozHw6-KKxM4-5dekpr-a6Lryn-nbbCaB-aeKzCN-e5bs6p-KKkPs-n4k2wP-53rszg-GpC3dh-rfTx4R-cysLPU-GoszBa-77z6Ck-nbbGW8-a6o3j7-5NxM6p-FLV2Mv-7jg6JX-77zWQe-77VmZR-a6o171-77A5Hc-nD2e5t-ooCXPN-a6katt-oqqiyx-czJnt9-a6LRLP-aeGKRn-bPqPfK-wEyHeU-cAMidL">Great Sand Dunes</a>
         <p></p>
     </div>
+    <div class="info thirteenth">
+        <a target="_blank" href="http://www.kylefrost.com">Channel Islands</a>
+        <p>Kyle Frost</p>
+    </div>
+    <div class="info fourteenth">
+        <a target="_blank" href="https://www.theoutbound.com/jake-young">Badlands</a>
+        <p>Jake Young</p>
+    </div>
 </div>
 <div class="timeline">
     <div class="year first">
